# lazy-ein

./: .gitignore  .gometalinter.json  Gemfile  LICENSE  README.md  common.rb  go.mod  go.sum  main.go  rakefile.rb  stg.go
.circleci/: config.yml
ast/: algebraic_alternative.go  algebraic_alternatives.go  algebraic_case.go  alternative.go  alternatives.go  application.go  argument.go  atom.go  bind.go  case.go  constructor.go  constructor_definition.go  default_alternative.go  expression.go  float64.go  lambda.go  let.go  literal.go  module.go  number.go  primitive_alternative.go  primitive_alternatives.go  primitive_case.go  primitive_operation.go  variable.go
codegen/: code_generator.go  code_generator_test.go  constructor_definition_generator.go  function_body_generator.go  function_body_generator_test.go  function_generator.go  generate.go  generate_function.go  generate_test.go  module_generator.go  module_generator_test.go  phi_generator.go  type_generator.go  type_generator_test.go  utilities.go
command/: arguments.go  build.go  command.go  command_test.go  init.go
features/: build.feature  error.feature  function.feature  help.feature  list.feature  number.feature
llir/: add_function.go  types.go
parse/: parse.go  parse_test.go
runtime/: Cargo.toml  Makefile  README.md  build.rs  rakefile.rb
runtime/io/: Cargo.toml  README.md  build.rs  rakefile.rb
runtime/io/src/: core.rs  effect_ref.rs  io.rs  lib.rs  runner.rs  util.rs
runtime/io/src/coro/: error.rs  mod.rs
tools/: build-with-system-llvm.sh
types/: algebraic.go  boxed.go  closure.go  (+6 more)
(+243 files in other folders)
